@@ -81,7 +81,12 @@ public class JFlashPlayer extends Composite {
     });
   }
 
-  private final ResourceBundle RESOURCES = ResourceBundle.getBundle(JFlashPlayer.class.getPackage().getName().replace('.', '/') + "/resource/FlashPlayer");
+  private final ResourceBundle RESOURCES;
+
+  {
+    String className = JFlashPlayer.class.getName();
+    RESOURCES = ResourceBundle.getBundle(className.substring(0, className.lastIndexOf('.')).replace('.', '/') + "/resource/FlashPlayer");
+  }
 
   private Composite webBrowserPanel;
   private JWebBrowser webBrowser;
@@ -105,7 +110,15 @@ public class JFlashPlayer extends Composite {
       ObjectHTMLConfiguration objectHTMLConfiguration = new ObjectHTMLConfiguration();
       if(flashPlayer.options != null) {
         // Possible when debugging and calling the same URL again. No options but better than nothing.
-        objectHTMLConfiguration.setHTMLParameters(flashPlayer.options.getHTMLParameters());
+        Map<String, String> htmlParameters = flashPlayer.options.getHTMLParameters();
+        if(!htmlParameters.containsKey("base")) {
+          String loadedResource = flashPlayer.webBrowserObject.getLoadedResource();
+          if(loadedResource != null) {
+            int lastIndex = loadedResource.lastIndexOf('/');
+            htmlParameters.put("base", loadedResource.substring(0, lastIndex + 1));
+          }
+        }
+        objectHTMLConfiguration.setHTMLParameters(htmlParameters);
       }
       objectHTMLConfiguration.setWindowsClassID("D27CDB6E-AE6D-11cf-96B8-444553540000");
       objectHTMLConfiguration.setWindowsInstallationURL("http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,0,0");
